--- a/cloud/static/html/dashboard.html
+++ b/cloud/static/html/dashboard.html
@@ -1,52 +1,57 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whack-A-Mole Dashboard</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/x-icon" href="/static/ico/favicon.ico" />
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'system-ui', 'sans-serif'],
-              mono: ['JetBrains Mono', 'monospace'],
-            },
-            colors: {
-              gray: {
-                750: '#2a2f3a',
-                850: '#1a1d24',
-                950: '#0f1115',
-              },
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Whack-A-Mole Dashboard</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/x-icon" href="/static/ico/favicon.ico" />
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'system-ui', 'sans-serif'],
+            mono: ['JetBrains Mono', 'monospace'],
+          },
+          colors: {
+            gray: {
+              750: '#2a2f3a',
+              850: '#1a1d24',
+              950: '#0f1115',
             },
           },
         },
-      };
-    </script>
-    <link rel="stylesheet" href="/static/css/dashboard.css" />
-  </head>
-  <body class="bg-gray-950 text-gray-100 min-h-screen font-sans">
-    <div class="max-w-7xl mx-auto px-6 py-8">
-      <header class="mb-8">
-        <h1 class="text-3xl font-bold text-white tracking-tight">Whac-A-Mole</h1>
-        <p class="text-gray-400 text-sm mt-1">Device Dashboard</p>
-      </header>
+      },
+    };
+  </script>
+  <link rel="stylesheet" href="/static/css/dashboard.css" />
+</head>
 
-      <div id="devices" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-        <div class="col-span-full flex items-center justify-center py-16 text-gray-500">
-          <div class="text-center">
-            <div class="text-5xl mb-4 opacity-50">&#128225;</div>
-            <div class="text-lg">Loading devices...</div>
-          </div>
+<body class="bg-gray-950 text-gray-100 min-h-screen font-sans">
+  <div class="max-w-7xl mx-auto px-6 py-8">
+    <header class="mb-8">
+      <h1 class="text-3xl font-bold text-white tracking-tight">Whack-A-Mole</h1>
+      <p class="text-gray-400 text-sm mt-1">Device Dashboard</p>
+    </header>
+
+    <div id="devices" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+      <div class="col-span-full flex items-center justify-center py-16 text-gray-500">
+        <div class="text-center">
+          <div class="text-5xl mb-4 opacity-50">&#128225;</div>
+          <div class="text-lg">Loading devices...</div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="/static/js/dashboard.js"></script>
-  </body>
+  <script src="/static/js/dashboard.js"></script>
+</body>
+
 </html>
