applied chanes to get into server

--- a/dashboard/static/html/dashboard.html
+++ b/dashboard/static/html/dashboard.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/x-icon" href="static/ico/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/jj/static/ico/favicon.ico" />
     <script>
       tailwind.config = {
         theme: {
@@ -28,7 +28,7 @@
         },
       };
     </script>
-    <link rel="stylesheet" href="static/css/dashboard.css" />
+    <link rel="stylesheet" href="/jj/static/css/dashboard.css" />
   </head>
   <body class="bg-gray-950 text-gray-100 min-h-screen font-sans">
     <div class="max-w-7xl mx-auto px-6 py-8">
@@ -47,6 +47,6 @@
       </div>
     </div>
 
-    <script src="static/js/dashboard.js"></script>
+    <script src="/jj/static/js/dashboard.js"></script>
   </body>
 </html>
