--- a/dashboard/static/html/dashboard.html
+++ b/dashboard/static/html/dashboard.html
@@ -1,73 +1,102 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whac-A-Mole Dashboard</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" type="image/x-icon" href="/jj/static/ico/favicon.ico" />
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'system-ui', 'sans-serif'],
-              mono: ['JetBrains Mono', 'monospace'],
-            },
-            colors: {
-              gray: {
-                750: '#2a2f3a',
-                850: '#1a1d24',
-                950: '#0f1115',
-              },
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Whac-A-Mole Dashboard</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet"
+  />
+
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'system-ui', 'sans-serif'],
+            mono: ['JetBrains Mono', 'monospace'],
+          },
+          colors: {
+            gray: {
+              750: '#2a2f3a',
+              850: '#1a1d24',
+              950: '#0f1115',
             },
           },
         },
-      };
-    </script>
-    <link rel="stylesheet" href="/jj/static/css/dashboard.css" />
-  </head>
-  <body class="bg-gray-950 text-gray-100 min-h-screen font-sans">
-    <div class="max-w-7xl mx-auto px-6 py-8">
-      <header class="mb-8">
-        <h1 class="text-3xl font-bold text-white tracking-tight">Whac-A-Mole</h1>
-        <p class="text-gray-400 text-sm mt-1">Device Dashboard</p>
-      </header>
+      },
+    };
+  </script>
 
-      <div class="flex gap-2 mb-6">
-        <button onclick="showTab('devices')" id="tab-devices" class="px-4 py-2 rounded-lg bg-sky-600 text-white font-medium">Devices</button>
-        <button onclick="showTab('leaderboard')" id="tab-leaderboard" class="px-4 py-2 rounded-lg bg-gray-800 text-gray-400 font-medium hover:bg-gray-700">Leaderboard</button>
+  <link rel="stylesheet" href="/jj/static/css/dashboard.css" />
+  <link rel="icon" type="image/x-icon" href="/jj/static/ico/favicon.ico" />
+</head>
+
+<body class="bg-gray-950 text-gray-100 min-h-screen font-sans">
+  <div class="max-w-7xl mx-auto px-6 py-8">
+
+    <!-- Header -->
+    <header class="mb-6 flex items-center gap-4">
+      <img src="/jj/static/ico/molelogo.png" alt="Mole Logo" class="w-20 h-auto" />
+      <div>
+        <h1 class="text-2xl font-bold text-white tracking-tight">Whac-A-Mole</h1>
+        <p class="text-gray-400 text-sm">Device Dashboard</p>
       </div>
+    </header>
 
-      <div id="devices" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-        <div class="col-span-full flex items-center justify-center py-16 text-gray-500">
-          <div class="text-center">
-            <div class="text-5xl mb-4 opacity-50">&#128225;</div>
-            <div class="text-lg">Loading devices...</div>
-          </div>
+    <!-- Tabs -->
+    <div class="flex gap-2 mb-6">
+      <button
+        onclick="showTab('devices')"
+        id="tab-devices"
+        class="px-4 py-2 rounded-lg bg-sky-600 text-white font-medium"
+      >
+        Devices
+      </button>
+      <button
+        onclick="showTab('leaderboard')"
+        id="tab-leaderboard"
+        class="px-4 py-2 rounded-lg bg-gray-800 text-gray-400 font-medium hover:bg-gray-700"
+      >
+        Leaderboard
+      </button>
+    </div>
+
+    <!-- Devices -->
+    <div id="devices" class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+      <div class="col-span-full flex items-center justify-center py-16 text-gray-500">
+        <div class="text-center">
+          <div class="text-5xl mb-4 opacity-50">&#128225;</div>
+          <div class="text-lg">Loading devices...</div>
         </div>
       </div>
+    </div>
 
-      <div id="leaderboard" class="hidden">
-        <div class="bg-gray-850 rounded-xl shadow-xl overflow-hidden border border-gray-800">
-          <div class="px-5 py-4 bg-gray-800/50">
-            <h2 class="text-xl font-semibold text-white">Top 5 Scores</h2>
-          </div>
-          <div id="leaderboard-list" class="divide-y divide-gray-800">
-            <div class="flex items-center justify-center py-16 text-gray-500">
-              <div class="text-center">
-                <div class="text-5xl mb-4 opacity-50">🏆</div>
-                <div class="text-lg">Loading leaderboard...</div>
-              </div>
+    <!-- Leaderboard -->
+    <div id="leaderboard" class="hidden">
+      <div class="bg-gray-850 rounded-xl shadow-xl overflow-hidden border border-gray-800">
+        <div class="px-5 py-4 bg-gray-800/50">
+          <h2 class="text-xl font-semibold text-white">Top 5 Scores</h2>
+        </div>
+        <div id="leaderboard-list" class="divide-y divide-gray-800">
+          <div class="flex items-center justify-center py-16 text-gray-500">
+            <div class="text-center">
+              <div class="text-5xl mb-4 opacity-50">🏆</div>
+              <div class="text-lg">Loading leaderboard...</div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="/jj/static/js/dashboard.js"></script>
-  </body>
+  </div>
+
+  <script src="/jj/static/js/dashboard.js"></script>
+</body>
 </html>
