added code to ensure logo loads on server

--- a/dashboard/static/html/dashboard.html
+++ b/dashboard/static/html/dashboard.html
@@ -41,7 +41,7 @@
     <header class="mb-8">
       <!-- <h1 class="text-3xl font-bold text-white tracking-tight">Whac-A-Mole</h1> -->
 
-      <img src="../ico/molelogo.png" style="width: 80px;  " />
+      <img src="/jj/static/ico/molelogo.png" style="width: 80px;" />
 
       <p class="text-gray-400 text-sm mt-1">Device Dashboard</p>
     </header>
