fix(dashboard): allow running locally/remotely via root path stuff

--- a/dashboard/static/html/dashboard.html
+++ b/dashboard/static/html/dashboard.html
@@ -15,7 +15,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
-  <link rel="icon" type="image/x-icon" href="/jj/static/ico/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="static/ico/favicon.ico" />
   <script>
     tailwind.config = {
       theme: {
@@ -35,7 +35,7 @@
       },
     };
   </script>
-  <link rel="stylesheet" href="/jj/static/css/dashboard.css" />
+  <link rel="stylesheet" href="static/css/dashboard.css" />
 </head>
 
 
@@ -45,7 +45,7 @@
     <header class="mb-8">
       <!-- <h1 class="text-3xl font-bold text-white tracking-tight">Whac-A-Mole</h1> -->
 
-      <img src="/jj/static/ico/molelogo.png" style="width: 80px;" />
+      <img src="static/ico/molelogo.png" style="width: 80px;" />
 
       <p class="text-gray-400 text-sm mt-1">Device Dashboard</p>
     </header>
@@ -83,7 +83,7 @@
 
   </div>
 
-  <script src="/jj/static/js/dashboard.js"></script>
+  <script src="static/js/dashboard.js"></script>
 </body>
 
 </html>
